Fixed #5 error when loading via AMD or bundling using Webpack

--- a/examples/browser/offloadFunctions.html
+++ b/examples/browser/offloadFunctions.html
@@ -17,7 +17,7 @@
   }
 
   // offload execution of a function to the worker pool
-  pool.run(add, [3, 4])
+  pool.exec(add, [3, 4])
       .then(function (result) {
         document.write('Result: ' + result); // outputs 7
       });
