Upgrade mocha, update tests to use `assert.strictEqual`

--- a/examples/browser/offloadFunctions.html
+++ b/examples/browser/offloadFunctions.html
@@ -3,7 +3,7 @@
 <head>
   <title>Worker pool in the browser</title>
 
-  <script src="../../dist/workerpool.js"></script>
+  <script src="../../dist/workerpool.min.js"></script>
 </head>
 <body>
 
